# llm-json-streaming

./: .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  example_prefill_partial.py  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  dependency-check.yml  quality.yml  release.yml  test.yml
examples/: basic_usage.py
examples/fastapi_nextjs/: README.md  start.sh
examples/fastapi_nextjs/backend/: main.py  requirements.txt
examples/fastapi_nextjs/frontend/: package.json  pnpm-lock.yaml
examples/fastapi_nextjs/frontend/app/: globals.css  layout.tsx  page.tsx
examples/fastapi_nextjs/frontend/app/api/stream/: route.ts
llm_json_streaming/: __init__.py  base.py  factory.py
llm_json_streaming/providers/: __init__.py  anthropic_prefill.py  anthropic_provider.py  openai_provider.py
llm_json_streaming/providers/anthropic/: __init__.py  prefill.py  provider.py  structured.py
llm_json_streaming/providers/google/: __init__.py  provider.py
llm_json_streaming/providers/openai/: __init__.py  provider.py
tests/: test_anthropic_integration.py  test_anthropic_provider_unit.py  test_factory.py  test_google_integration.py  test_mock_provider.py  test_openai_integration.py  test_providers.py
